# bench-metrics

./: .dockerignore  .envrc.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  lefthook.yml
.github/workflows/: build.yml
integration_test/: check.sh
manifests/: configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
resources/test/: config.yaml
src/: main.rs
