[package]
name = "bench-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
hyper = {version="0.14.28", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.20"
prometheus = {version="0.13.3", features = ["process"] }
prometheus-http-query = "0.8.2"
reqwest = {version="0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.106"
serde_with = "3.4.0"
serde_yaml = "0.9.29"
structured-logger = "1.0.3"
tokio = { version = "1", features = ["full"] }
